<resources>
    <string name="app_name">FootEasy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="google_signIn">Google</string>
    <string name="facebook_signIn">Facebook</string>
    <string name="linkedin_signIn">LinkedIn</string>
    <string name="microsoft_signIn">Microsoft</string>

    <string name="app_facebook_id">963307897090232</string>
    <string name="app_facebook_secret">5b406fcf65e4b7732b3c0cf62f02d03f</string>
    <string name="linkedin_auth_desc">Image for linkedIn authorization</string>
    <string name="microsoft_auth_desc">Image for microsoft authorization</string>
    <string name="facebook_content_desc">Image for facebook authorization</string>
    <string name="retry">Retry</string>
    <string name="google_auth_desc">Google auth desc</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_product_listing">ProductListingActivity</string>
    <string name="yahoo_content_desc">Yahoo authorization desc</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="review_number">(%1$s)</string>
    <string name="default_product_cost">%1$s%2$s</string>
    <string name="product_image_desc">Product Image</string>
    <string name="title_activity_season_listing">SeasonListing</string>
    <string name="title_activity_football">Football</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="leagues">Leagues</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_league_detail">LeagueDetail</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
