<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    tools:context=".SplashActivity" >

    <FrameLayout
        android:id="@+id/image_container"
        android:layout_weight="0.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/product_image_desc"
            android:layout_marginLeft="5dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:gravity="start|top"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="Charles J. Meyers"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RatingBar
                android:id="@+id/product_rating"
                android:clickable="false"
                style="?android:attr/ratingBarStyleSmall"
                android:rating="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/review_number"
                android:text="@string/review_number"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.2"
        android:layout_width="0dp"

        android:layout_height="wrap_content">

        <!-- is in format $99.99 -->
        <TextView
            android:id="@+id/product_cost"
            android:layout_width="wrap_content"
            android:text="@string/default_product_cost"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/product_source"
            android:src="@drawable/ebay_img"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>